# Game

./: LICENSE  README.md  pyproject.toml
src/: __init__.py  base.py  board.py  bot.py  botbase.py  fakes.py  go.py  gui.py  tui.py  ui.py
src/temporary/: example_grid.txt
tests/: test_fake.py  test_go.py
